# siwy-proj

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  design_proposal_xai_llm.md  pyproject.toml  run_experiment.py  tasks.py
conf/: config.yaml
data/raw/: prompts.json
docs/: TODO.md  design-proposal.md  report.md
scripts/: generate_report.py  run_experiment.py  run_inseq.py
src/attribution/: inseq_analysis.py
src/config/: model.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  attention_utils.py  extract_attention.py  xai_utils.py
src/visualization/: __init__.py  report.py  visualize.py
