.\.venv\Scripts\Activate.ps1[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siwy-xai-llm"
version = "0.1.0"
description = "Wyjaśnianie cech zachowania w modelach językowych: analiza attention"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.2",
    "accelerate>=0.27.2",
    "bitsandbytes>=0.42.0",
    "bertviz>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "hydra-core>=1.3.2",
    "wandb>=0.16.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "jupyter>=1.0.0"
]
