[project]
name = "siwy-xai-llm"
version = "0.1.0"
description = "Analiza wag attention w modelach językowych jako metoda XAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.2",
    "accelerate>=0.27.2",
    "bitsandbytes>=0.42.0",
    "bertviz>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "hydra-core>=1.3.2",
    "wandb>=0.16.3",
    "loguru>=0.7.0",
    "invoke>=2.2.0",
    "inseq>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
